--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 <div style="margin-right: 30px;">
                     <center><h3>My Contact Details</h3></center>
                     <i class="fa fa-phone-square"> Mobile Number: 7416501128</i><br><br>
+                    <i class="fa fa-envelope-square"> Email: revathi10184@ gmail.com</i><br><br>
                 </div>
         
                 <div>
