--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
         <br>
         <br>
         <br>
+        <div id="Home">
+            <br>
+                <div class="image-row">
+                    <div><h1 style="color:lightcoral">Run out of time for PhD completion?<style>=color</style></h1>
+                        <p style="margin-left: 5%;font-style:italic">Every scholar had a deadline to complete his PhD. With the quality of time spent on research will produce better research findings. REVATHI team assists research.
+                        </p>
+                    </div>
+                        <img src="https://thumbs.dreamstime.com/b/run-out-time-cartoon-running-office-worker-clock-51405435.jpg" alt="Image 1">
+                    
+                </div>
+        </div>
 
+        <br>
         <div 
         style="margin-left: 19%;margin-right: 19%;">
 
