--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <br>
         <div id="Home">
             <br>
+            <br>
                 <div class="image-row">
-                    <div><h1 style="color:lightcoral">Run out of time for PhD completion?<style>=color</style></h1>
-                        <p style="margin-left: 5%;font-style:italic">Every scholar had a deadline to complete his PhD. With the quality of time spent on research will produce better research findings. REVATHI team assists research.
+                    <div><h1 style="color:lightcoral">Oppertunity Corner<style>=color</style></h1>
+                        <p style="margin-left: 5%;font-style:italic">There are openings for Content writers .
                         </p>
                     </div>
                         <img src="https://thumbs.dreamstime.com/b/run-out-time-cartoon-running-office-worker-clock-51405435.jpg" alt="Image 1">
