--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <br>
         <br>
         <br>
-        <div id="Home">
+<!--         <div id="Home">
             <br>
                 <div class="image-row">
                     <div><h1 style="color:lightcoral">Oppertunity Corner<style>=color</style></h1>
@@ -86,7 +86,17 @@
                         <img src="https://thumbs.dreamstime.com/b/run-out-time-cartoon-running-office-worker-clock-51405435.jpg" alt="Image 1">
                     
                 </div>
-        </div>
+        </div> -->
+
+        <div id="Home">
+            <br>
+            <div class="image-row">
+                        <img style="margin-left: 100px;" src="https://thumbs.dreamstime.com/b/run-out-time-cartoon-running-office-worker-clock-51405435.jpg" alt="Image 1"><div><h1 style="color:lightcoral">Oppurtunity Corner<style>=color</style></h1>
+                            <p style="margin-center: 5%;font-style:italic">There are openings for Content writers .
+                        </p>
+                    </div>
+                    
+                </div>
 
         <br>
         <div 
