--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#Services">Services</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#Contact">Contact</a></li>
-            <li><a href="#Careers">Careers</a></li>
+            <li><a href="#career">Careers</a></li>
         </ul>
         <div class="menu-icon">&#9776;</div>
     </nav>
@@ -87,7 +87,7 @@
                     
                 </div>
         </div>  -->
-        <div id="Home">
+      <div id="career">
             <br>
                 <div class="image-row">
                     <div><h1 style="color:lightcoral;margin-left: 300px;">Oppertunity Corner<style>=color</style></h1>
