--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="font-style:italic;">REVATHI TECHNOLOGY</title>
+    <title style="font-style:italic;">REVATHI TECHNOLOGIES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="logo">
         </div>
 
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGY</div>
+        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>
 
     </nav>
     <nav class="navbar" id="navbar">
@@ -289,7 +289,7 @@
 
         <br><br>
         <div style="margin-left: 15%; margin-right: 15%;background-color: gainsboro;">
-            <center><h1 style="font-family: 'Times New Roman', Times, serif;font-weight: 300;">Additionally,We At REVATHI  TECHNOLOGY Encourage Research Scholars To Present New Challenges. Feel Free To Approach Us With Your Idea.
+            <center><h1 style="font-family: 'Times New Roman', Times, serif;font-weight: 300;">Furthermore, Research Scholars Are Encouraged To Present New Challenges By REVATHI Technologies. Please Contact Us With Your Ideas.
             </h1></center>
             <center><a href="#Contact"><button style="height: 40px; width:150px;border-radius: 25px;background-color: rgb(216, 218, 218);cursor: pointer;margin-bottom: 5px;">Contact Us</button></a></center>
             
