--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
                 <br>
-        <div id="About">
+        <!-- <div id="About">
             <br>
             <div class="image-row">
                     
@@ -75,7 +75,7 @@
         <br>
         <br>
         <br>
-        <br>
+        <br> -->
 <!--        <div id="Home">
             <br>
                 <div class="image-row">
