--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#Services">Services</a></li>
+            <li><a href="#Services">Services</a>
 		<ul id="submenu">
 		<table>
 		<tr>
@@ -47,6 +47,7 @@
 		<tr>
 	</table>
 		</ul>
+		    </li>
             <li><a href="#About">About Us</a></li>
             <li><a href="#Contact">Contact</a></li>
             <li><a href="#career">Careers</a></li>
