--- a/index.html
+++ b/index.html
@@ -22,32 +22,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#Services">Services</a>
-		<ul id="submenu">
-		<table>
-		<tr>
-			<th>Machine learning<th>
-			<th>Image Processing<th>
-			<th>Signal Processing<th>
-		<tr>
-		<tr>
-			<td>Wireless Sensor networks<td>
-			<td>cLoud computing<td>
-			<td>Networking<td>
-		<tr>
-		<tr>
-			<td>Wireless communication<td>
-			<td>Magnet<td>
-			<td>Artificial Intellegence<td>
-		<tr>
-		<tr>
-			<td>Power Electronics<td>
-			<td>Power Systems<td>
-			<td>Control Systems<td>
-		<tr>
-	</table>
-		</ul>
-		    </li>
+            <li><a href="#Services">Services</a></li>
             <li><a href="#About">About Us</a></li>
             <li><a href="#Contact">Contact</a></li>
             <li><a href="#career">Careers</a></li>
