--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>
-<img src="logo_123.png" style="width:50px;border-radius:50px">
+<img src="logo_123.png">
     </nav>
     <nav class="navbar" id="navbar">
         <div class="logo">
