--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav class ="navbar" style="position: fixed; z-index: 999;">
         <div class="logo">
         </div>
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES
-        <img src="logo_123.png"></div>
+        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>
+        <img src="logo_123.png" style="width=10 heigth=20">
 
     </nav>
     <nav class="navbar" id="navbar">
