--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
         </div>
         <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>
-        <img src="logo_123.png">
+        <img src="logo_123.png" style="width=10 height=20">
 
     </nav>
     <nav class="navbar" id="navbar">
