--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="nav-links">
             <li><a href="#Home">Home</a></li>
             <li><a href="#Services">Services</a></li>
-            <li><a href="#Domains">Services</a></li>
+            <li><a href="#Domains">Domains</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#Contact">Contact</a></li>
             <li><a href="#career">Careers</a></li>
