--- a/index.html
+++ b/index.html
@@ -215,10 +215,11 @@
                         Control Systems
                     </div>
                 </div>
+            
                <div class="image-container">
                     <img src="https://th.bing.com/th/id/OIP.da_heMo1H82HFUUPMpeuYAHaE8?w=264&h=180&c=7&r=0&o=5&pid=1.7" alt="Image 1">
                     <div class="overlay-content">
-                        Control Systems
+                         Systems
                     </div>
                 </div>
                
