--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="logo">
         </div>
 
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>
-<img src="logo_123.png";
+        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES
+<img src="logo_123.png"</div>;
     </nav>
     <nav class="navbar" id="navbar">
         <div class="logo">
