--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
         </div>
     <div class="logo-container">
-        <img src="logo_123.png"</div>;
+        <img src="logo_123.png style=height:auto width:50px"</div>;
         <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>;
     </nav>
     <nav class="navbar" id="navbar">
