--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
        
                 <div>
-               
+               <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
                             <tr>
                                 <td><label>Name</label></td>
