--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
        
 
         <br>
+            <table border = "1">
+        <tr>
+        
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+    </table>
         <div
         style="margin-left: 19%;margin-right: 19%;">
 
