--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <td>4</td>
         </tr>
     </table>
+ <div id="Domains">
         <div
         style="margin-left: 19%;margin-right: 19%;">
 
@@ -208,6 +209,7 @@
                     </div>
                 </div>
            </div>
+        </div>
                 </div>
     
             </div>
