--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
  <div id="Domains">
         <div
         style="margin-left: 19%;margin-right: 19%;">
-
+        <center><h1>Domains</h1></center>
             <div class="new-section">
                
                 <div class="image-container">
