--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         </tr>
     </table>
  <div id="Domains">
+      <h1>Domains</h1>
         <div
         style="margin-left: 19%;margin-right: 19%;">
-        <center><h1>Domains</h1></center>
             <div class="new-section">
                
                 <div class="image-container">
