--- a/index.html
+++ b/index.html
@@ -101,18 +101,10 @@
        
 
         <br>
-            <table border = "1">
-        <tr>
         
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-        </tr>
-    </table>
  <div id="Domains">
-      <h1>Domains</h1>
-      <h4 style="color:lightcoral"> We will instruct you in the following fields of research applicable to all fields of engineering, technology and science. We will instruct you in the following fields of research applicable to all fields of engineering, technology and science.</h4>
+      <h1style="color:lightcoral">Domains</h1>
+      <h4 > We will instruct you in the following fields of research applicable to all fields of engineering, technology and science. We will instruct you in the following fields of research applicable to all fields of engineering, technology and science.</h4>
         <div
         style="margin-left: 19%;margin-right: 19%;">
             <div class="new-section">
