--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
         <br>
         
- <div id="Domains">
-      <h1style="color:lightcoral">Domains</h1>
-      <h4 > We will instruct you in the following fields of research applicable to all fields of engineering, technology and science. We will instruct you in the following fields of research applicable to all fields of engineering, technology and science.</h4>
-        <div
+ <div class="image-row">
+                    <div><h1 style="color:lightcoral">Run out of time for PhD completion?<style>=color</style></h1>
+                        <p style="margin-left: 5%;font-style:italic">Every scholar had a deadline to complete his PhD. With the quality of time spent on research will produce better research findings. REVATHI team assists research.
+                        </p>
         style="margin-left: 19%;margin-right: 19%;">
             <div class="new-section">
                
