--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
        
  <div class="action">
-        <div class="action">services</div>
+        <div class="class">services</div>
     </div>
         <br>
         <div
