--- a/index.html
+++ b/index.html
@@ -99,28 +99,19 @@
                 </div>
           
         </div>
-       
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>service</h2>
-    <div class="box">
-        <div class="class">hello</div>
-        <div class="class">hello</div>
-        <div class="class">hello</div>
-        <div class="class">hello</div>
-        <div class="class">hello</div>
-        <div class="class">hello</div>
-    </div>
-    </div>
-</body>
-</html>
+   <div class="main">
+        <h2>service</h2>
+        <div class="box">
+            <div class="class">hello</div>
+            <div class="class">hello</div>
+            <div class="class">hello</div>
+            <div class="class">hello</div>
+            <div class="class">hello</div>
+            <div class="class">hello</div>
+        </div>
+        </div>
+    </div>    
+
         <br>
         <div
         style="margin-left: 19%;margin-right: 19%;">
