--- a/index.html
+++ b/index.html
@@ -102,12 +102,19 @@
    <div class="main">
         <h2>service</h2>
         <div class="box">
-            <div class="class">hello</div>
-            <div class="class">hello</div>
-            <div class="class">hello</div>
-            <div class="class">hello</div>
-            <div class="class">hello</div>
-            <div class="class">hello</div>
+            <div class="class">Pre-PHD</div>
+            <div class="class">On-PHD</div>
+            <div class="class">Post-PHD</div>
+            <div class="class">Consulting Services</div>
+            <div class="class">Topic Selection</div>
+            <div class="class">Literature Survey</div>
+            <div class="class">Base Paper Selection</div>
+            <div class="class">Research Proporsal</div>
+            <div class="class">Implementation</div>
+            <div class="class">Paper & Language Edeting</div>
+            <div class="class">Plagiarism Reduction</div>
+            <div class="class">Journal Formating & Publication</div>
+            <div class="class">Thesis & Dissertation</div>
         </div>
         </div>
     </div>    
