--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="font-style:italic;">REVATHI TECHNOLOGIES</title>
+    <title style="font-style:italic;">REVATHI-TECH SOFTWARES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="logo_123.png" alt="image1" width="18%" height="18%">
         </div>
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI TECHNOLOGIES</div>;
+        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI-TECH SOFTWARES</div>;
     </nav>
     <nav class="navbar" id="navbar">
         <div class="logo">
@@ -100,7 +100,7 @@
           
         </div>
    <div class="main">
-        <h2>service</h2>
+        <h2>Service</h2>
         <div class="box">
             <div class="class">Pre-PHD</div>
             <div class="class">On-PHD</div>
@@ -121,6 +121,8 @@
 
         <br>
         <div
+               <div class="main">
+        <h2>Domains</h2>
         style="margin-left: 19%;margin-right: 19%;">
 
             <div class="new-section">
