--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <div
                <div class="main">
         <h2>Domains</h2>
+             </div>
         style="margin-left: 19%;margin-right: 19%;">
 
             <div class="new-section">
