--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="logo_123.png" alt="image1" width="18%" height="18%">
         </div>
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI-TECH SOFTWARES</div>;
+        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI-TECH SOFTWARES</div>
     </nav>
     <nav class="navbar" id="navbar">
         <div class="logo">
@@ -124,7 +124,7 @@
                <div class="main">
         <h2>Domains</h2>
              </div>
-        <style="margin-left:35 %;margin-right: 23%;">
+        <style="margin-left:40 %;margin-right: 19%;">
             <div class="new-section">
                
                 <div class="image-container">
