--- a/index.html
+++ b/index.html
@@ -119,10 +119,8 @@
         </div>
         <br>
         <div
-               <div class="main">
-        <h2>Domains</h2>
-             </div>
-        <style="margin-left:100 %;margin-right: 19%;">
+        style="margin-left: 19%;margin-right: 19%;">
+
             <div class="new-section">
                
                 <div class="image-container">
