--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         </div>
         </div>
         <br>
+            </div>
+   <div class="main">
+        <h2>Service</h2>
         <div
         style="margin-left: 19%;margin-right: 19%;">
 
