--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
         <br>
             </div>
    <div class="main">
-        <h2>Service</h2>
+        <h2>Domain</h2>
         <div
+            
         style="margin-left: 19%;margin-right: 19%;">
 
             <div class="new-section">
