--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
           
         </div>
    <div class="main">
-        <h2>Service</h2>
+        <h2 style="color:lightcoral">Service</h2>
+       <p style="color:black;">We will instruct you in the following fields of research applicable to all fields of engineering, technology and science</p>
         <div class="box">
             <div class="class">Pre-PHD</div>
             <div class="class">On-PHD</div>
