--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
                <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
                             <tr>
-                                <td><label>Name</label></td>
-                                <td><input type="text" name="name" value=""></td>
+<!--                                 <td><label>Name</label></td> -->
+                                <td><input type="text" name="name" value="" placeholder="Name></td>
                             </tr>
                             <tr>
-                                <td><label>Email</label></td>
-                                <td><input type="email" name="email" value=""></td>
+<!--                                 <td><label>Email</label></td> -->
+                                <td><input type="email" name="email" value="" placeholder="Email"></td>
                             </tr>
                             <tr>
                                 <td><label>Your Message</label></td>
