--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
         <div id="Contact">
             <br>
-            <center><h1>CONTACT Section</h1></center>
+            <center><h1>CONTACT SECTION</h1></center>
 
             <div class="cont">
                 <div style="margin-right: 30px;">
@@ -241,11 +241,11 @@
                <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
                             <tr>
-<!--                                 <td><label>Name</label></td> -->
+                                <td><label>Name</label></td>
                                 <td><input type="text" name="name" value="" placeholder="Name></td>
                             </tr>
                             <tr>
-<!--                                 <td><label>Email</label></td> -->
+                                <td><label>Email</label></td>
                                 <td><input type="email" name="email" value="" placeholder="Email"></td>
                             </tr>
                             <tr>
@@ -259,9 +259,6 @@
                     </form>
                 </div>
             </div>
-
-
-           
         </div>
 
         <br>
