--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <table cellspacing="10">
                             <tr>
                                 <td><label>Name</label></td>
-                                <td><input type="text" name="name" value="" placeholder="Name></td>
+                                <td><input type="text" name="name" value="" placeholder="Name"></td>
                             </tr>
                             <tr>
                                 <td><label>Email</label></td>
