--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <div class="class">Thesis & Dissertation</div>
         </div>
         </div>
-            <div id="Domains">
-                domain
+            <div> 
+            <h2 style="color:lightcoral">Service</h2>
             </div>
         <div style="margin-left: 19%;margin-right: 19%;">
             <div class="new-section">
