--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
             <div class="class">Thesis & Dissertation</div>
         </div>
         </div>
-            <div> 
-            <h2 style="color:lightcoral">Service</h2>
+            <div id="Domains> 
+                <center>
+                <h2 style="color:lightcoral">Domains</h2>
+                </center>
             </div>
         <div style="margin-left: 19%;margin-right: 19%;">
             <div class="new-section">
