--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
             <div class="class">Thesis & Dissertation</div>
         </div>
         </div>
-                <h2 style="color:lightcoral">Domains</h2>
-<!--             <div id="Domains> 
                 <center>
-                </center> -->
+                <h2 style="color:lightcoral">Domains</h2>
+                </center>
             </div>
         <div style="margin-left: 19%;margin-right: 19%;">
             <div class="new-section">
