--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <br>
 
-        <div id="Confidentiality">
+        <div id="Home">
             <br>
             <div class="image-row">
                         <img style="margin-left: 100px;" src="https://cdn.dribbble.com/users/690781/screenshots/4161621/dribbble_privacy_20171213.gif" alt="Image 1"><div><h1 style="color:lightcoral">Confidentiality<style>=color</style></h1>
@@ -75,7 +75,7 @@
         <br>
         <br>
         <br>
-<!--        <div id="Home">
+<!--        <div>
             <br>
                 <div class="image-row">
                     <div><h1 style="color:lightcoral">Oppertunity Corner<style>=color</style></h1>
