--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
           
         </div>
-   <div class="main">
+   <div class="main" id="Services">
         <h2 style="color:lightcoral">Service</h2>
        <p style="color:black;">We will instruct you in the following fields of research applicable to all fields of engineering, technology and science</p>
         <div class="box">
@@ -121,7 +121,7 @@
                 <h2 style="color:lightcoral">Domains</h2>
                 </center>
             </div>
-        <div style="margin-left: 19%;margin-right: 19%;">
+        <div style="margin-left: 19%;margin-right: 19%;" id="Domains">
             <div class="new-section">
                
                 <div class="image-container">
