--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <p style="margin-left: 5%;font-family: 'Times New Roman', Times, serif;">
 
 
-                            But, in practicality, the supervision is almost impossible due to personal and professional activities of research scholars.To assist such uncomfortable scholars, we’re a team of expertise to fast forward your research with many levels of guidance. Revathi Technologies is best at assisting research analysis with greater precision.
+                            But, in practicality, the supervision is almost impossible due to personal and professional activities of research scholars.To assist such uncomfortable scholars, we’re a team of expertise to fast forward your research with many levels of guidance. Revathi Technologies is best at assisting research analysis with greater precision.We have worked for more than three years, completed more than 100 research projects, and had numerous articles published in various research journals.
 
                             </p>
                     </div>
