--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                             </tr>
                             <tr>
                                 <td><label>Your Message</label></td>
-                                <td><textarea name="message" rows="5" cols="20" class="resize:none;"></textarea></td>
+                                <td><textarea name="message" rows="5" cols="20"></textarea></td>
                             </tr>
                             <tr>
                                 <td colspan="2"><input type="submit"></td>
@@ -286,7 +286,7 @@
 
         <br><br>
         <div style="margin-left: 15%; margin-right: 15%;background-color: gainsboro;">
-            <center><h1 style="font-family: 'Times New Roman', Times, serif;font-weight: 300;">Furthermore, Research Scholars Are Encouraged To Present New Challenges By REVATHI Technologies. Please Contact Us With Your Ideas.
+            <center><h1 style="font-family: 'Times New Roman', Times, serif;font-weight: 300;">Furthermore, Research Scholars Are Encouraged To Present New Challenges By REVATHI - TECH SOFTWARES. Please Contact Us With Your Ideas.
             </h1></center>
             <center><a href="#Contact"><button style="height: 40px; width:150px;border-radius: 25px;background-color: rgb(216, 218, 218);cursor: pointer;margin-bottom: 5px;">Contact Us</button></a></center>
         </div>
