--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title style="font-style:italic;">REVATHI-TECH SOFTWARES</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +13,7 @@
         <div class="logo">
             <img src="logo_123.png" alt="image1" width="18%" height="18%">
         </div>
-        <div class="logo" style="padding-top: 2.5%;font-style:italic;">REVATHI-TECH SOFTWARES</div>
+        <div class="logo" style="padding-top: 2.5%;">REVATHI-TECH SOFTWARES</div>
     </nav>
     <nav class="navbar" id="navbar">
         <div class="logo">
