--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p style="margin-left: 5%;font-style:italic">There are openings for Content writers .
                         </p>
                     </div>
-                        <img src="https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg" alt="Image 1">
+                        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shiksha.com%2Fhumanities-social-sciences%2Farticles%2Fcareer-opportunities-after-pursuing-phd-blogId-59015&psig=AOvVaw3Si9hDieDDYptz8Ja-563n&ust=1703063263189000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMCzkpiTm4MDFQAAAAAdAAAAABAD" alt="Image 1">
                    
                 </div>
         </div>  -->
