--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <br>
         <br>
         <br>
-<!--        <div>
+<div>
             <br>
                 <div class="image-row">
                     <div><h1 style="color:lightcoral">Opportunity Corner<style>=color</style></h1>
@@ -79,7 +79,7 @@
                         <img src=https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg"" alt="Image 1">
                    
                 </div>
-        </div>  -->
+        </div>
       <div id="career">
             <br>
                 <div class="image-row">
