--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
       <div id="career">
             <br>
                 <div class="image-row">
-                    <div><h1 style="color:lightcoral;margin-left: 300px;">Oppertunity Corner<style>=color</style></h1>
+                    <div><h1 style="color:lightcoral;margin-left: 300px;">Opportunity Corner<style>=color</style></h1>
                         <p style="margin-left: 300px;font-style:italic">There are openings for Content writers .
                         </p>
                     </div>
-                        <img style="margin-right: 100px;" src="https://thumbs.dreamstime.com/b/run-out-time-cartoon-running-office-worker-clock-51405435.jpg" alt="Image 1">
+                        <img style="margin-right: 100px;"https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg " alt="Image 1">
                    
                 </div>
           
