--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p style="margin-left: 300px;font-style:italic">There are openings for Content writers .
                         </p>
                     </div>
-                        <img src="margin-right: 100px;"https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg " alt="Image 1">
+                        <img src="https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg" alt="Image 1">
                    
                 </div>
           
