--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <br>
             <div class="image-row">
                     <div><h1><style>=color</style></h1>
-                    <p style="margin-left: 5%;font-style:italic">The big obstacle for any research scholar is to understand the basics of research concept. We at REVATHI assist from start of selecting right topic to submission. We provide services in various research domains which are not only limited to...
+                    <p style="margin-left: 5%;font-style:italic">The big obstacle for any research scholar is to understand the basics of research concept. We at REVATHI assist from start of selecting right topic to submission. We provide services in various research domains.
                     </p>
                 </div>
                 <img src="https://us.123rf.com/450wm/virtosmedia/virtosmedia2302/virtosmedia230249279/198743398-graduation-cap-with-golden-feather-education-concept-3d-rendering.jpg" alt="Image 1">
