--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
                     <div><h1 style="color:lightcoral;margin-left: 300px;">Opportunity Corner<style>=color</style></h1>
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
-                        <p style="margin-left: 300px;font-style:italic">The roles of profession are,Research Analyst
-                                                                                                    Technical Writer/Reader
-                                                                                                    Business Development Executive
-                                                                                                    Manuscript Editors
+                        <p style="margin-left: 300px;font-style:italic">The roles of profession are,
+                                                    Research Analyst                                <div class="class">esearch Analyst</div>
+                                                                                                    <div class="class">Technical Writer/Reader</div>
+                                                                                                    <div class="class">Business Development Executive</div>
+                                                                                                    <div class="class">Manuscript Editors</div>
                         </p>
                     </div>
                         <img src="https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg" alt="Image 1">
