--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
                     <div><h1 style="color:lightcoral;margin-left: 300px;">Opportunity Corner<style>=color</style></h1>
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
-                        <p style="margin-left: 300px;font-style:italic">The roles of profession are,
-                        </p> <div class="class">Research Analyst</div> </p>
-                        </p> <div class="class">Technical Writer/Reader</div></p>
-                        </p> <div class="class">Business Development Executive</div></p>
-                        </p> <div class="class">Manuscript Editors</div></p>
+                        <h2>Unordered List with Circle Bullets</h2>
+                        <ul style="list-style-type:circle;">
+                        <li>Coffee</li>
+                        <li>Tea</li>
+                        <li>Milk</li>
+                        </ul> 
                         </p>
                     </div>
                         <img src="https://images.shiksha.com/mediadata/images/articles/1620135481phpZG1JRg.jpeg" alt="Image 1">
