--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div><h1 style="color:lightcoral;margin-left: 300px;">Opportunity Corner<style>=color</style></h1>
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
-                        <h2>Unordered List with Circle Bullets</h2>
+                        <p style="margin-left: 5%;font-style:italic">
                         <ul style="list-style-type:circle;">
                         <li>Coffee</li>
                         <li>Tea</li>
@@ -224,14 +224,13 @@
             <br>
             <center><h1>CONTACT SECTION</h1></center>
 
-            <div class="cont">
+           <div class="cont">
                 <div style="margin-right: 30px;">
                     <center><h3>My Contact Details</h3></center>
                     <i class="fa fa-phone-square"> Mobile Number: 9581996171</i><br><br>
                     <i class="fa fa-envelope-square"> emailto:revathi10184@ gmail.com</i><br><br>
-                    <i class="fa fa-whatsapp"><button href ="http://wa.me/+91 8919594801+"> whatsapp</i><br><br></button>
-                </div>
-       
+                    <i class="fa fa-whatsapp"><a href ="http://wa.me/+91 8919594801+"> whatsapp</i><br><br></a>
+                </div>
                 <div>
                <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
