--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
                         <p style="margin-left: 5%;font-style:italic">
-                        <ul style="list-style-type:circle;">
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
+                        <ul style="list-style-type:circle; text-aline:center">
+                        <li>Research Analyst</li>
+                        <li>Technical Writer/Reader</li>
+                        <li>Manuscript Editors</li>
                         </ul> 
                         </p>
                     </div>
