--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div><h1 style="color:lightcoral;margin-left: 300px;">Opportunity Corner<style>=color</style></h1>
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
-                        <p style="margin-left: 5%;font-style:italic">
+                        <p style="margin-left: 300px;font-style:italic">
                         <ul style="list-style-type:circle; text-aline:center">
                         <li>Research Analyst</li>
                         <li>Technical Writer/Reader</li>
