--- a/index.html
+++ b/index.html
@@ -251,6 +251,22 @@
                             </tr>
                         </table>
                     </form>
+                    ////////////
+                    <div class="social">
+                    <a href="mailto:hareeshdhruva123@gmail.com" class="a-style">
+                        <div class="logo-border">
+                          <img src="gmail.png" alt="" class="size" />
+                          <p>email</p>
+                        </div>
+                    </a>
+                    <a href="whatsapp:+918522832511" class="a-style">
+                        <div class="logo-border">
+                            <img src="whatsapp.png" alt="" class="size" />
+                            <p>whatsApp</p>
+                        </div>
+                    </a>
+                    </div>
+                   ///////////
                 </div>
             </div>
         </div>
