--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
             </div>
         </div>
         <div class="social">
-          <a href="mailto:hareeshdhruva123@gmail.com" class="a-style">
+          <a href="mailto:revathi10184@ gmail.com" class="a-style">
              <div class="logo-border">
                 <img src="gmail.png" alt="" class="size" />
                 <p>email</p>
             </div>
          </a>
-          <a href="whatsapp:+918522832511" class="a-style">
+          <a href="whatsapp:+918919594801" class="a-style">
             <div class="logo-border">
                  <img src="whatsapp.png" alt="" class="size" />
                  <p>whatsApp</p>
