--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p style="margin-left: 300px;font-style:italic">There are openings for Professional Content writers .
                         </p>
                         <p style="margin-left: 300px;font-style:italic">
-                        <ul style="list-style-type:circle; text-aline:center">
+                        <ul style="list-style-type:circle;margin-left: 300px;">
                         <li>Research Analyst</li>
                         <li>Technical Writer/Reader</li>
                         <li>Manuscript Editors</li>
