--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
 
         <div id="Contact">
-            <br>
+<!--             <br>
             <center><h1>CONTACT SECTION</h1></center>
 
            <div class="cont">
@@ -229,9 +229,8 @@
                     <center><h3>My Contact Details</h3></center>
                     <i class="fa fa-phone-square"> Mobile Number: 9581996171</i><br><br>
                     <i class="fa fa-envelope-square"> emailto:revathi10184@ gmail.com</i><br><br>
-                    <i class="fa fa-whatsapp"><a href ="http://wa.me/+91 8919594801+"> whatsapp</i><br><br></a>
                 </div>
-                <div>
+                <div> -->
                <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
                             <tr>
@@ -261,7 +260,7 @@
                 <p>email</p>
             </div>
          </a>
-          <a href="whatsapp:+918919594801" class="a-style">
+          <a href="whatsapp:+919581996171" class="a-style">
             <div class="logo-border">
                  <img src="whatsapp.png" alt="" class="size" />
                  <p>whatsApp</p>
