--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
 
         <div id="Contact">
-<!--             <br>
+              <br>
             <center><h1>CONTACT SECTION</h1></center>
 
            <div class="cont">
@@ -230,7 +230,7 @@
                     <i class="fa fa-phone-square"> Mobile Number: 9581996171</i><br><br>
                     <i class="fa fa-envelope-square"> emailto:revathi10184@ gmail.com</i><br><br>
                 </div>
-                <div> -->
+                <div> 
                <form action="mailto:revathi10184@ gmail.com" method="post" enctype="text/plain">
                         <table cellspacing="10">
                             <tr>
