--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <p>email</p>
             </div>
          </a>
-          <a href="whatsapp:+919581996171" class="a-style">
+          <a href="http://wa.me/+919581996171" class="a-style">
             <div class="logo-border">
                  <img src="whatsapp.png" alt="" class="size" />
                  <p>whatsApp</p>
