--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
         </div>
         <div class="social">
-          <a href="mailto:revathi10184@ gmail.com" class="a-style">
+          <a href="mailto:revathi10184@ gmail.com">Send Email</a>
              <div class="logo-border">
                 <img src="gmail.png" alt="" class="size" />
                 <p>email</p>
